# gql-to-sql

./: .gitignore  Cargo.toml  HANDOFF_NOW_QUERY_PATCHES.md  HANDOFF_OR_PRECEDENCE_AND_CROSS_JOIN.md  LICENSE  README.md
crates/gql-parser/: Cargo.toml
crates/gql-parser/src/: ast.rs  lexer.rs  lib.rs  parser.rs
crates/gql-transform/: Cargo.toml
crates/gql-transform/src/: lib.rs  plan.rs  resolver.rs  sql_builder.rs  transform_match.rs
crates/graph-executor/: Cargo.toml
crates/graph-executor/src/: executor.rs  lib.rs  schema.rs
crates/graph-executor/tests/: smoke.rs  turso_compat.rs
